# pcalib

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/lighting/: CMakeLists.txt  lighting.cpp
apps/pcalib/: CMakeLists.txt  pcalib.cpp
apps/photocalib/: CMakeLists.txt  photocalib.cpp
apps/vignette/: CMakeLists.txt  vignette.cpp
apps/vignetting/: CMakeLists.txt  vignetting.cpp
cmake/: FindGFlags.cmake  FindGLog.cmake
include/pcalib/: calibration.h  calibration_reader.h  calibration_writer.h  camera.h  controller.h  dense_vignetting.h  exception.h  hal_camera.h  image.h  light.h  light_problem.h  light_problem_solver.h  linear_response.h  pcalib.h.in  poly_response.h  poly_vignetting.h  polynomial_response.h  response.h  response_impl.h  response_problem.h  response_problem_builder.h  response_problem_solver.h  uniform_vignetting.h  vignetting.h  vignetting_impl.h  visitor.h
include/photocalib/: calibration.h  calibration_reader.h  camera.h  controller.h  exception.h  hal_camera.h  image.h  light.h  light_problem.h  light_problem_solver.h  polynomial_response.h  response.h  response_problem.h  response_problem_builder.h  response_problem_solver.h  vignetting.h
src/: calibration.cpp  calibration_reader.cpp  calibration_writer.cpp  camera.cpp  hal_camera.cpp  light_problem_solver.cpp  polynomial_response.cpp  response.cpp  response_problem_builder.cpp  response_problem_solver.cpp
tests/: CMakeLists.txt  calibration_test.cpp  calibration_writer_test.cpp  camera_test.cpp  controller_test.cpp  dense_vignetting_test.cpp  exception_test.cpp  linear_response_test.cpp  poly_response_test.cpp  poly_vignetting_test.cpp  polynomial_response_test.cpp  response_test.cpp  uniform_vignetting_test.cpp
